# chat_demo_server

./: README.md  package-lock.json  pyproject.toml
chat_demo/: chat_demo_server.py  install_css.py  main.py
src/: index.html.jinja  query2_genfact.html.jinja  row_result_genfact.html.jinja
src/frontend/: altair.html  index.html  output.html.jinja  test.html  widget.html  widget.html.jinja
src/frontend/chatbox/: chatbox.html.jinja  demo_options.html.jinja
src/frontend/static/: widgets.js
src/frontend/widgets/: distribution.html  distribution.html.jinja  fixed_tabs.html  fixed_tabs.html.jinja  gensql.html  highlighted_text.html.jinja  plot.html  table.html.jinja  tabs.html
