[tool.poetry]
name = "chat-demo"
version = "0.1.0"
description = "A base for ChatGPT-style probcomp demos"
authors = ["Matthew Davidson <matthew@modulolotus.net>"]
readme = "README.md"
packages = [{include = "chat_demo"}]
include = [
    { path = "src/index.html.jinja"},
    { path = "dist/"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.2.2"
ipdb = "^0.13.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
jinja2-fragments = "^1.1.0"
python-multipart = "^0.0.6"
pytailwindcss = "^0.2.0"
black = "^23.9.1"
requests = "^2.32.3"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[tool.poetry.scripts]
chat_demo_install_css = "chat_demo.install_css:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
