[tool.poetry]
name = "chat-demo"
version = "0.1.0"
description = "A base for ChatGPT-style probcomp demos"
authors = ["Matthew Davidson <matthew@modulolotus.net>"]
readme = "README.md"
packages = [{include = "chat_demo"}]
include = [
    { path = "src"},
    { path = "dist/"},
]

exclude = [
    {path = "src/query2_genfact.html.jinja"},
    {path = "src/row_result_genfact.html.jinja"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.2.2"
ipdb = "^0.13.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
jinja2-fragments = "^1.1.0"
python-multipart = "^0.0.6"
black = "^23.9.1"
requests = "^2.32.3"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
